--- a/Resources/CSS/stylesheet.css
+++ b/Resources/CSS/stylesheet.css
@@ -61,6 +61,11 @@ header {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 20px;
+}
+
+.article {
+  padding: 10px 5px;
 }
 
 #phish {
@@ -71,13 +76,20 @@ header {
   align-items: flex-start;
 }
 
+
 h1.phototitle {
   font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
   color: white;
-  padding-left: 10px;
-  padding-right: 10px;
+}
+
+h1.phototitle2 {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
 }
 
 #fall {
@@ -86,7 +98,6 @@ h1.phototitle {
   height: 300px;
   width: 300px;
   display: flex;
-  justify-content: center;
   align-items: flex-start;
 }
 
@@ -95,7 +106,6 @@ h1.phototitle {
   height: 300px;
   width: 300px;
   display: flex;
-  justify-content: center;
   align-items: flex-start;
 }
 
@@ -108,6 +118,7 @@ h1.phototitle {
   font-family: Georgia;
   font-size: 17px;
   color: black;
+  margin-bottom: 0;
 }
 
 .article2text {
@@ -116,11 +127,6 @@ h1.phototitle {
   font-size: 17px;
   color: black;
 }
-
-
-
-
-
 
 .column.medium {
   background-color: red;
